kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations: 
      kubernetes.io/ingress.class: public
      nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
  # - host: hie.ytedongthap.vn
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong-proxy
            port:
              number: 80
